--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,18 @@
 }
 
 h1  {
-    color: rgb(128, 122, 122);
-    font-family: 'Gill Sans';
+    color: black;
+    font-family: 'Gill Sans', sans-serif;
     padding: 25px;
-    background-color: rgb(216, 213, 213);
     font-size: 50px;
     width: 100%;
+    display: inline;
+    background-color: white;
+    margin: 20px;
+}
+
+header {
+    background-color: rgb(128, 122, 122);
 }
 
 header nav {
@@ -21,14 +27,32 @@ header nav {
 
 header nav ul li {
     margin: 20px;
-    color: black;
-    font: 'Gill Sans';
     font-size: 35px;
     list-style-type: none;
     display: inline;
+    line-height: 50px;
+}
+a {
+    color: black;
+    font-family: 'Gill Sans', sans-serif;
 }
 
-.mainimage {
-    object-fit: cover;
+header div img {
+    width: 100%;
+    height: 300px;
 }
 
+header div {
+    position: relative;
+}
+
+header div p {
+    position: absolute;
+    color: black;
+    background-color: rgb(128, 122, 122);
+    bottom: 20px;
+    right: 40px;
+    font-family: 'Gill Sans', sans-serif;
+    padding: 10px 20px 10px 20px;
+    font-size: 200%;
+}
