--- a/css/style.css
+++ b/css/style.css
@@ -85,13 +85,47 @@ header div p {
     position: relative;
     height: 500px;
     width: 100%;
+    border-width: 5px solid;
+    border-color: honeydew;
+    box-shadow: inset rgb(185, 219, 230)
+
 }
 
 .main-card:hover{
-    box-shadow: gray;
+    box-shadow: none;
 }
 
 #music-card {
     background-image: url(../images/tecchlercello.jpeg);
-    
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}ß
+
+#making-card {
+    background-image: url(../images/stradpainting.jpeg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+#coffee-card {
+    background-image: url(../images/roaster.jpeg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+#coding-card {
+    background-image: url(../images/codingshot2.jpeg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+#mtg-card {
+    background-image: url(../images/ravnica.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
