--- a/css/style.css
+++ b/css/style.css
@@ -89,20 +89,20 @@ header div p:hover {
 
 .secondrow {
     display: flex;
-    align-items: flex-start;
     flex-direction: row;
-    margin-top: 50px;
     justify-content: center;
+    border-left: 5px solid darkslateblue;
     width: 75%;
+    margin-left: 25%;
 }
 
 .thirdrow {
     display: flex;
-    align-items: flex-start;
     flex-direction: row;
-    margin-top: 50px;
     justify-content: center;
+    border-left: 5px solid darkslateblue;
     width: 75%;
+    margin-left: 25%;
 }
 
 
@@ -167,6 +167,8 @@ header div p:hover {
     position: absolute;
     margin-top: 300px;
 }
+
+
 
 .overlaytextboxsub:hover {
     opacity: 100%;
